<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="Media_library">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="Dark_theme">Темная тема</string>
    <string name="Share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="mailAgreement">Valeryarhy@yandex.ru</string>
    <string name="Agreement">Пользовательское соглашение</string>
    <string name="shareLink">"https://practicum.yandex.ru/profile/android-developer-plus/?from=profile_subscriptions-with-prof-recommendations"</string>
    <string name="mailSupport">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="themeMail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="AgreementUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="hint_artist_name">Artist Name</string>
    <string name="hint_extra_info">Extra Info</string>
    <string name="hint_track_name">Track Name</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="user_search">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="empty_list_favor">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\n\ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_track">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="add_track">Добавить в плейлист</string>
    <string name="dialog_finish_playlist_title">Завершить создание плейлиста?</string>
    <string name="dialog_finish_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_finish_playlist_cancel">Отмена</string>
    <string name="dialog_finish_playlist_confirm">Завершить</string>
    <string name="track_added">Трек добавлен в плейлист</string>
    <string name="track_exists">Трек уже в плейлисте</string>
    <string name="track_added_to_playlist">Добавлено в плейлист "%1$s"</string>
    <string name="track_already_in_playlist">Трек уже в этом плейлисте</string>
    <string name="delete_track_title">Удалить трек?</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить этот трек из плейлиста?</string>
    <string name="delete">ДА</string>
    <string name="cancel">НЕТ</string>
    <string name="Share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="Deleted_playlist">Удалить плейлист</string>
    <string name="playlist_not_found">Плейлист не найден</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="update_playlist">Плейлист обновлён</string>
    <string name="playlist_created">Плейлист "%1$s" создан</string>
    <string name="deleted_playlist">удалить</string>
    <string name="cancel_deleted">отмена</string>
    <string name="no_tracks">В плейлисте нет треков</string>
    <string name="channel_name">Управление воспроизведением</string>
    <string name="notification_permission_denied">Разрешение на работу плеера в фоновом режиме</string>
    <string name="channel_description">Позволяет управлять воспроизведением музыки в фоновом режиме</string>
</resources>