<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Panel_header"
    android:background="?attr/colorSecondaryVariant">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:text="@string/app_name"
            android:textColor="@color/white"/>
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/search_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/media_button"
        style="@style/ButtonStyle"
        android:text="@string/Media_library"
        app:icon="@drawable/media" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/set_button"
        style="@style/ButtonStyle"
        android:text="@string/Settings"
        app:icon="@drawable/settings" />
</LinearLayout>
