<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        style="@style/Title"
        app:title="@string/Settings">

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/Lines_settings"
        android:text="@string/Dark_theme"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shareButton"
        style="@style/Lines_settings"
        android:drawableEnd="@drawable/share"
        android:text="@string/Share" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/supportButton"
        style="@style/Lines_settings"
        android:drawableEnd="@drawable/support"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/agreementButton"
        style="@style/Lines_settings"
        android:drawableEnd="@drawable/arrow"
        android:text="@string/Agreement" />

</LinearLayout>