<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/item_vertical_padding"
    android:paddingStart="@dimen/item_padding_start"
    android:paddingEnd="@dimen/item_padding_end">

    <ImageView
        android:id="@+id/icon_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/album_image_margin_end"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackName"
            style="@style/TextView.Regular.16.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hint_track_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/hint_artist_name" />


            <ImageView
                android:id="@+id/smallIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/separator"
                app:tint="@color/YP_Text_Gray" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/TextView.Regular.11.YPGRAY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/hint_extra_info" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/rightIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        app:tint="?attr/colorSurfaceInverse" />
</LinearLayout>