<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search">

    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/query_input"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:lines="1"
            android:maxLength="15"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/icon_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="140dp"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/YP_Blue"
            android:visibility="gone"/>


        <LinearLayout
            android:id="@+id/searchHistoryGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/search_user"
                style="@style/TextView.Medium.19.black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/user_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clear_history"
                style="@style/ButtonStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/clear_history" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/placeholder_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:src="@drawable/search_null"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/no_found"
                style="@style/TextView.Medium.19.black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/nothing_found"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/placeholder_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:src="@drawable/error_internet"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/placeholder_message"
                style="@style/TextView.Medium.19.black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_connection"
                android:visibility="gone"/>

            <Button
                android:id="@+id/update_button"
                style="@style/ButtonStyleBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:visibility="gone"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>