<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/TextView.Medium.22.black"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=""/>

    <ImageView
        android:id="@+id/addPhotoPlaceholder"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:background="@drawable/rounded_rectangle_punkt"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_playlist"
        android:layout_marginTop="32dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorSurfaceInverse"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/addPhotoPlaceholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorSurfaceInverse"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorSurfaceInverse"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorSurfaceInverse"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/save_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_color"
        android:text="@string/create"
       style="@style/TextView.Medium.16"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>